# homepage

./: .gitignore  Cargo.toml  asciimathextension.py  config.toml  d2extension.py  gen.sh  justfile  my_notes.txt  pelican_feed_stylesheet2.py  pelicanconf.py  publishconf.py  requirements.txt
content/: 404.md  authentication-bypass-vulnerability-in-philips-intellispace-cardiovascular.md  experiments-in-building-uefi-programs.md  one-click-rce-by-design.md  picis-or-manager-paying-to-fix-what-wasn't-broken.md  remote-code-execution-and-authentication-bypass-in-materialise-orthoview-cve-2025-23049.md  tesla-coil-driver-circuit.md  tesla-coil-parameters.md  tesla-coil-power-supply-board-design.md  tesla-coil-square-wave-midi-synthesizer-part-1.md  vulnerabilities-in-mirions-nuclear-medicine-information-system.md  web-things.md
content/assets/: dominictarr-first-names.json  supplemental.css
content/attachments/: philips-iscv-exploit.py
content/feeds/: feed.xslt
content/images/: dicom-network.d2  iscv-flow.d2
content/pages/: 404.md  google-10000-english-no-swears.json  markov.md  web-things.md
content/post/: tesla-parameters.md
content/static/: feed.xslt  robots.txt  site.webmanifest
src/: content.rs  diagrams.rs  favicon.rs  main.rs  markdown.rs  preamble.d2  syntax_highlighting.css  templates.rs  util.rs
syntaxes/: Cargo.toml  newlines.packdump
syntaxes/src/: main.rs
templates/: archives.html  base.css  base.html  feed.xml  index.html  main.css  page.html  password-strength-checker.html  simple-markov-generator.html  simple.css  simple.html  sitemap.xml
(+47 files in other folders)
