[package]
name = "site-generator"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["syntaxes"]

[dependencies]
askama = "0.14.0"
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "clock"] }
comrak = { version = "0.39.1", default-features = false, features = [] }
mathemascii = "0.4.0"
regex = "1.11.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "dump-load",
    "regex-fancy",
    "html",
] }
walkdir = "2.5.0"
chrono-tz = "0.10.3"
ordinal = "0.4.0"
resvg = { version = "0.45.1", default-features = false, features = ["text"] }
image = { version = "0.25.6", default-features = false, features = [
    "webp",
    "jpeg",
    "ico",
] }
color-eyre = { version = "0.6.5", default-features = false }
ntscrs = { default-features = false, git = "https://github.com/valadaptive/ntsc-rs.git" }
xmltree = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.14.0"
oxipng = "9.1.5"
rayon = "1.10.0"
clap = { version = "4.5.41", features = ["derive"] }

[profile.dev.package.fancy-regex]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
incremental = true
